# simpletree-editor-app

./: .gitignore  README.md  forge.config.js  index.html  main.html  nuitka_compiler.py  package-lock.json  package.json  recents.ini  requirements.txt  session.ini  settings.ini  splash.html  vite.config.js  vite.main.config.mjs.timestamp-1729985230834-bdc4381419f9b.mjs
_internal/: nuitka_compiler.py  version_increment.py
resource/: styles.css
resource/themes/: app.css  default.css
root/: recents.ini  session.ini  settings.ini
root/license/: license_strevee.txt
src/: App.jsx  Layout.jsx  main.js  main.jsx  renderer.js  splash.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  app_menu.rs  lib.rs  main.rs
src/app/: ContextMenu.jsx  DropdownMenu.jsx  GlobalListener.jsx  Internal.jsx  Menu.jsx  MenuDefinitions.jsx  Menu_OLD.jsx  TitleBar.jsx
src/component/: Anchors.jsx  HeadAttr.jsx  InputField.jsx  LayoutElement.jsx  TreeDocument.jsx  TreeElement.jsx
src/context/: AppContext.jsx  AppMenus.jsx  BackendApi.js  BackendApi.jsx  Constants.jsx  FileContext.jsx  Functions.jsx  GlobalContext.jsx  GlobalStores.jsx
src/hooks/: UseDndStylizer.jsx  UseDocument.jsx  UseMenuItems.jsx
src/main/: preload.js
src/module/: FileView.jsx  Statusbar.jsx  Tabsrow.jsx
src/renderer/: Layout.jsx
src/res/: document.css  editor.css  fileview.css  splash.css  styles.css  test.css  theme.css  utility.css
src/view/: Editor.jsx  Settings.jsx  Test.jsx
srcpy/: __builtins__.pyi  main.py
srcpy/strevee/: _reftypes.py  (+9 more)
(+30 files in other folders)
